styles/contact-style.css
@import url(../styles/style.css);

:root{
    --background:#0c0c0c;
    --lightgreen:#6FB444;
    --darkgreen:#122903;
  }

body{
  background-color: var(--background);
}


/* =========================== c-sec-1 ======================== */

.c-sec-1{
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
.c-sec-1 .c-sec-img{
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 65px;
}
.c-sec-1 img{
  width: 70%;
  transform: rotate(180deg);
}


.c-sec-1 .c-sec-cont{
  /* width: 100%; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  color: white;
  font-family: 'helveticathin';
}

.c-sec-cont .c-sec-in{
  width: 255px;
  position: relative;
  right: -50%;
  transform: translateX(-50%);
}
.c-sec-cont input{
  width: 235px;
  height: 45px;
  border-radius: 50px;
  border: 0;
  padding-left: 20px;
  font-family: 'helveticathin';
  color: white;
  background-color: var(--background);
  box-shadow: 10px 12px 10px -11px rgba(0,0,0,0.66),5px 5px 6px  #6d6d6d inset;
}

.c-sec-cont input:focus{
  outline: none;
}
.c-sec-cont button{
  position: absolute;
  background-color: transparent;
  top: 25%;
  right: 5%;
  border: 0px;
}
.c-sec-cont p{
  padding-left: 40px;
}


.c-sec-cont p:nth-child(1) span{
  color: var(--lightgreen);
}
.c-sec-cont p:nth-child(3) span{
  color: var(--lightgreen);
  font-size: 12px;
}


/* ============================================================= */

/* ========================== c-sec-2 =========================== */


.c-sec-2{
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: white;
}

.c-sec-2 .c-sec2-img{
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;

}
.c-sec-2 .c-sec2-img img{
  width: 80%;
  /* mix-blend-mode:lighten; */
}

.c-sec-2 .c-sec2-contact{
  /* width: 80%; */
  display: flex;
  gap: 10px;
  flex-direction: column;
  justify-content: center;
  align-items: start;
}

.c-sec-2 .c-sec2-cont{
  width: 70%;
  margin-bottom: 30px;
}

.c-sec-2 .c-sec2-contact input{
  width: 90%;
  height: 40px;
  border-radius: 15px;
  border: 0;
  padding-left: 15px;
  font-family: 'helveticathin';
  color: white;
  background-color: var(--background);
  box-shadow: 10px 12px 10px -11px rgba(0,0,0,0.66),5px 5px 6px  #6d6d6d inset;
}

.c-sec-2 .c-sec2-contact textarea{
  width: 90%;
  height: 70px;
  border: 0;
  border-radius: 15px;
  padding-left: 15px;
  padding-top: 10px;
  font-family: 'helveticathin';
  color: white;
  background-color: var(--background);
  box-shadow: 10px 12px 10px -11px rgba(0,0,0,0.66),5px 5px 6px  #6d6d6d inset;
}

.c-sec-2 .c-sec2-contact input,textarea:focus{
  outline: none;
}

.c-sec-2 button{
  width: 80px;
  height: 30px;
  border-radius: 50px;
  border: 0;
  margin: 20px 0px 0px 0px;
  font-family: 'helveticabold';
  font-size: 10px;
  background-color: var(--lightgreen);
}


.c-sec-2 .c-sec2-contact p{
  font-family: 'helveticathin';
}
.c-sec-2 .c-sec2-contact span{
  color: var(--lightgreen);
}



.c-sec-2 .c-sec2-cont p{
  font-family: 'helveticathin';
}

.c-sec-2 .c-sec2-cont span{
  color: var(--lightgreen);
  font-size:13px ;
}


/* ============================================================== */


@media (min-width:481px) and (max-width:768px){
  .c-sec-1{
    flex-direction: row;
  }
  .c-sec-2{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2,0fr);
    place-items: center;
  }

  .c-sec-1 img {
    width: 60%;
  }

  .c-sec-2 .c-sec2-cont p{
    text-align: center;
  }


  .c-sec-2 :nth-child(1){
    grid-column: 2;

  }
  .c-sec-2 :nth-child(1) img{
    width: 60%;
  }
  .c-sec-2 :nth-child(2){
    grid-column: 1;
    grid-row: 1;
  }
  .c-sec-2 :nth-child(3){
    grid-column: span 2;
    
  }
  .c-sec-2 :nth-child(4){
    grid-column: span 2;
    width: 60%;
  }
  .c-sec-1 .c-sec-cont{
    margin-right: 40px;
  }
}

@media (min-width:769px) and (max-width:1023px){
  .c-sec-1{
    flex-direction: row;
  }
  .c-sec-2{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2,0fr);
    place-items: center;
  }

  .c-sec-1 img {
    width: 40%;
  }


  .c-sec-2 :nth-child(1){
    grid-column: 2;

  }
  .c-sec-2 :nth-child(1) img{
    width: 60%;
  }
  .c-sec-2 :nth-child(2){
    grid-column: 1;
    grid-row: 1;
  }
  .c-sec-2 :nth-child(3){
    grid-column: span 2;
    margin-top: 0px;
    
  }
  .c-sec-2 :nth-child(4){
    grid-column: span 2;
    width: 30%;
  }
  .c-sec-1 .c-sec-cont{
    margin-right: 150px;
  }

  .c-sec-2 .c-sec2-contact{
    width: 90%;
    margin-left: 180px;
  }

  .c-sec-2 .c-sec2-cont p {
    text-align: center;
}

}

@media (min-width:1024px) {
  .c-sec-1{
    flex-direction: row;
  }
  .c-sec-2{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2,0fr);
    place-items: center;
  }

  .c-sec-1 img {
    width: 40%;
  }


  .c-sec-2 :nth-child(1){
    grid-column: 2;

  }
  .c-sec-2 :nth-child(1) img{
    width: 50%;
  }
  .c-sec-2 :nth-child(2){
    grid-column: 1;
    grid-row: 1;
  }
  .c-sec-2 :nth-child(3){
    grid-column: span 2;
    margin-top: 0px;
    
  }
  .c-sec-2 :nth-child(4){
    grid-column: span 2;
    width: 50%;
  }
  .c-sec-1 .c-sec-cont{
    margin-right: 150px;
  }

  .c-sec-2 .c-sec2-contact{
    width: 350px;
    margin-left: 180px;
  }
  .c-sec-2 .c-sec2-contact input{
    width: 235px;
  }
  .c-sec-2 .c-sec2-contact textarea{
    width: 235px;
  } 

  .c-sec-2 .c-sec2-cont p {
    text-align: center;
}
}

@media (min-width:1440px){

  .sec-1-items{
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .sec-2-items{
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  
  .c-sec-1{
    width: 75%;
    flex-direction: row;
  }
  .c-sec-2{
    width: 75%;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2,0fr);
    place-items: center;
  }

  .c-sec-1 img {
    width: 40%;
    margin-left: 150px;
  }


  .c-sec-2 :nth-child(1){
    grid-column: 2;

  }
  .c-sec-2 :nth-child(1) img{
    width: 50%;
  }
  .c-sec-2 :nth-child(2){
    grid-column: 1;
    grid-row: 1;
  }
  .c-sec-2 :nth-child(3){
    grid-column: span 2;
    margin-top: 0px;
    
  }
  .c-sec-2 :nth-child(4){
    grid-column: span 2;
    width: 40%;
  }
  .c-sec-1 .c-sec-cont{
    margin-right: 150px;
  }

  .c-sec-2 .c-sec2-contact{
    width: 250px;
    margin-left: 285px;
  }

  .c-sec-2 .c-sec2-cont p {
    text-align: center;
}
}

